Added navbar and separated the app into three pages: main, admin and main

--- a/app/index.html
+++ b/app/index.html
@@ -20,21 +20,38 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container">
-      <div class="header">
-        <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
-        </ul>
-        <h3 class="text-muted">blockflojt</h3>
-      </div>
+    <div class="section full-height">
+        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <div class="container-fluid">
+              <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Blockflöjt</a>
+                </div>
 
-      <div ng-view=""></div>
+                <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="#">Party mode</a></li>
+                        <li><a href="#/admin">Admin</a></li>
+                        <li><a href="#/about">About</a></li>
+                    </ul>
+                </div>
 
-      <div class="footer">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
+            </div>
+        </div>
+        <div id="main-container" class="container" role="main">
+
+            <div ng-view=""></div>
+
+        </div>
+        <div class="footer">
+            <p>FOOTER</p>
+        </div>
     </div>
 
 
@@ -84,6 +101,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/admin.js"></script>
         <!-- endbuild -->
 </body>
 </html>
