--- a/app/index.html
+++ b/app/index.html
@@ -102,6 +102,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/admin.js"></script>
+        <script src="scripts/controllers/spotify-callback.js"></script>
         <!-- endbuild -->
 </body>
 </html>
