--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
 
     <!-- Add your site or application content here -->
     <div class="section full-height">
-        <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
             <div class="container-fluid">
               <!-- Brand and toggle get grouped for better mobile display -->
                 <div class="navbar-header">
