--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
 
                 <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav">
-                        <li><a href="">Party mode</a></li>
-                        <li><a href="/admin">Admin</a></li>
-                        <li><a href="/about">About</a></li>
+                        <li><a href="/#">Party mode</a></li>
+                        <li><a href="/#/admin">Admin</a></li>
+                        <li><a href="/#/about">About</a></li>
                     </ul>
                 </div>
 
