--- a/app/index.html
+++ b/app/index.html
@@ -23,37 +23,14 @@
 
     <!-- Add your site or application content here -->
     <div class="section full-height">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-            <div class="container-fluid">
-              <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="#">Blockflöjt</a>
-                </div>
 
-                <div class="collapse navbar-collapse pull-right" id="bs-example-navbar-collapse-1">
-                    <ul class="nav navbar-nav">
-                        <li><a href="/#">Party mode</a></li>
-                        <li><a href="/#/admin">Admin</a></li>
-                        <li><a href="/#/about">About</a></li>
-                    </ul>
-                </div>
-
-            </div>
-        </div>
         <div id="main-container" class="container" role="main">
-
             <div ng-view=""></div>
+        </div>
 
-        </div>
-        <div class="footer">
-            <p>FOOTER</p>
-        </div>
+        <about-directive></about-directive>
+
+        
     </div>
 
 
@@ -105,6 +82,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/admin.js"></script>
         <script src="scripts/controllers/spotify-callback.js"></script>
+        <script src="scripts/directives/about-directive.js"></script>
         <!-- endbuild -->
 </body>
 </html>
