--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@
        ga('create', 'UA-XXXXX-X');
        ga('send', 'pageview');</script> <!--[if lt IE 9]>
     <script src="scripts/oldieshim.76f279db.js"></script>
-    <![endif]--> <script src="scripts/vendor.f2c029d0.js"></script> <script src="scripts/scripts.401431a3.js"></script>  
+    <![endif]--> <script src="blockflojt/scripts/vendor.f2c029d0.js"></script> <script src="blockflojt/scripts/scripts.401431a3.js"></script>  
